--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "description": "Quickly generate redistributable components with Rollup",
   "author": "Michael Dodge",
   "license": "ISC",
-  "version": "0.0.1",
+  "version": "0.1.0",
+  "scripts": {
+    "sfc-init": "node ./sfc-init.js"
+  },
   "dependencies": {
     "readline-sync": "^1.4.9"
   }
