--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "description": "Quickly generate redistributable components with Rollup",
   "author": "Michael Dodge",
   "license": "ISC",
-  "version": "0.1.0",
-  "scripts": {
-    "sfc-init": "node ./sfc-init.js"
-  },
+  "version": "0.2.0",
+  "bin": { "sfc-rollup-init": "./sfc-init.js" },
   "dependencies": {
     "readline-sync": "^1.4.9"
   }
