--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "description": "Quickly generate redistributable components with Rollup",
   "author": "Michael Dodge",
   "license": "ISC",
-  "version": "0.2.0",
-  "bin": { "sfc-rollup-init": "./sfc-init.js" },
+  "version": "0.3.0",
+  "bin": {
+    "sfc-rollup-init": "./sfc-init.js"
+  },
   "dependencies": {
     "readline-sync": "^1.4.9"
   },
