--- a/package.json
+++ b/package.json
@@ -7,14 +7,25 @@
   "bin": {
     "sfc-rollup-init": "./sfc-init.js"
   },
-  "dependencies": {
-    "readline-sync": "^1.4.9"
-  },
   "keywords": [
     "vue",
     "template",
     "compiler",
     "rollup"
   ],
-  "homepage": "https://github.com/team-innovation/vue-sfc-rollup"
+  "homepage": "https://github.com/team-innovation/vue-sfc-rollup",
+  "scripts": {
+    "lint": "eslint ./**/*.js"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.9"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.13.0"
+  },
+  "engines": {
+    "node": ">=6"
+  }
 }
