sfc package.json - specify files property

--- a/templates/package.json
+++ b/templates/package.json
@@ -10,6 +10,11 @@
     "./sfc": "src/{{componentName}}.vue"
   },
 
+  "files": [
+    "dist/*",
+    "src/*"
+  ],
+
   "scripts": {
     "build": "npm run build:unpkg & npm run build:es & npm run build:umd",
     "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/{{componentName}}.umd.js",
