--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "lint": "eslint ./**/*.js"
   },
   "dependencies": {
+    "ejs": "^2.6.1",
     "readline-sync": "^1.4.9"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-plugin-import": "^2.13.0"
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   },
   "engines": {
     "node": ">=6"
