--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Quickly generate redistributable components with Rollup",
   "author": "Michael Dodge",
   "license": "ISC",
-  "version": "0.3.1",
+  "version": "1.0.0-alpha.0",
   "bin": {
     "sfc-rollup-init": "./sfc-init.js"
   },
