--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "rollup"
   ],
   "homepage": "https://github.com/team-innovation/vue-sfc-rollup",
+  "files": [
+    "templates/*",
+    "sfc-init.js"
+  ],
   "scripts": {
     "lint": "eslint ./**/*.js"
   },
