Add husky pre-commit/push hooks

--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
   "scripts": {
     "lint": "eslint ./**/*.js"
   },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run lint",
+            "pre-push": "npm audit"
+        }
+    },
   "dependencies": {
     "ejs": "^2.6.2",
     "prompts": "^2.2.1"
@@ -31,7 +37,8 @@
   "devDependencies": {
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.18.2",
+    "husky": "^3.0.3"
   },
   "engines": {
     "node": ">=6"
