--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Quickly generate redistributable components with Rollup",
   "author": "Michael Dodge",
   "license": "ISC",
-  "version": "3.0.1",
+  "version": "4.0.0-beta.0",
   "bin": {
     "sfc-init": "./sfc-init.js"
   },
